--- a/fxgoat.css
+++ b/fxgoat.css
@@ -413,13 +413,13 @@ svg{
 
 .chat-div .fa-whatsapp{
 	color:#fff;
-	background:green;
+	background:#128c7e;
 	margin-right:5px;
 	
 }
 
 .chat-div .fa-telegram{
-	color:blue;
+	color:#0088cc;
 	background-color: #fff;
 	margin-left:5px;
 }
