--- a/fxgoat.css
+++ b/fxgoat.css
@@ -1,6 +1,7 @@
 body{
 	font-family: arial;
 	overflow-x: hidden;
+	margin:0;
 }
 
 .header{
@@ -317,16 +318,17 @@ svg{
 /*menu*/
 .menu{
 	display: none;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.9);
 	padding:2em 0;
 	width:100%;
+	height: 10000px;
 	margin:auto;
 	margin-right: 20px;
-	min-height: 100%;
 	position: absolute;
-	top: 71px;
+	top: 62px;
 	color:#fff;
 	transition:5s;
+	overflow-y: hidden;
 }
 
 .menu-img{
@@ -392,11 +394,25 @@ svg{
 	border-top: 5px solid #808080;
 	padding-bottom: 1em;
 	width:300px;
+	height: 160px;
 	margin:auto;
 	margin-top: 4em;
 	text-align: center;
 	letter-spacing: 1px;
 	font-stretch: 50px;
+	position: relative;
+}
+
+.chat-div .whatsapp{
+	left:55px;
+	top:70px;
+	position: absolute;
+}
+
+.chat-div .telegram{
+	top:70px;
+	right: 55px;
+	position: absolute;
 }
 
 .chat-div h4{
@@ -404,11 +420,17 @@ svg{
 }
 
 .chat-div i{
-	
+	margin-bottom: 13px;
 	text-decoration: none;
 	padding:6px 10px;
 	font-size: 35px;
 	border-radius: 10px;
+}
+
+.chat-div a{
+	font-stretch: 50px;
+	color:#fff;
+	letter-spacing: 1.5px;
 }
 
 .chat-div .fa-whatsapp{
